fixed dark mode issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,6 @@ body {
   color: light-dark(var(--foreground), var(--background));
   background: light-dark(var(--background), var(--foreground));
   font-family: Arial, Helvetica, sans-serif;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
